--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "tesseract.js": "^2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
