--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@tensorflow/tfjs": "^3.13.0",
     "@tensorflow/tfjs-converter": "^3.13.0",
     "@tensorflow/tfjs-core": "^3.13.0",
+    "@tensorflow/tfjs-node": "^3.14.0",
+    "@tensorflow/tfjs-vis": "^1.5.1",
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
