--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@tensorflow/tfjs-node": "^3.14.0",
     "@tensorflow/tfjs-vis": "^1.5.1",
     "axios": "^0.25.0",
+    "image-recog": "file:..",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
