--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
+    "install-all": "concurrently \"npm install\" \"npm run client-install\"",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
@@ -28,7 +29,6 @@
     "@tensorflow/tfjs-node": "^3.15.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "fs": "^0.0.1-security",
-    "mongoose": "^6.2.1"
+    "fs": "^0.0.1-security"
   }
 }
