--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
+    "install-all": "concurrently \"npm install\" \"npm run client-install\"",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
@@ -25,11 +26,9 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^3.16.0",
-    "@tensorflow/tfjs-node": "^3.16.0",
-    "@tensorflow/tfjs-vis": "^1.5.1",
+    "@tensorflow/tfjs-node": "^3.15.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "http-server": "^14.1.0"
+    "fs": "^0.0.1-security"
   }
 }
