--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,11 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.1",
-    "@tensorflow-models/mobilenet": "^2.1.0",
     "@tensorflow/tfjs": "^3.16.0",
     "@tensorflow/tfjs-converter": "^3.13.0",
     "@tensorflow/tfjs-core": "^3.13.0",
     "axios": "^0.25.0",
+    "image-recog": "file:..",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
